# Percepcion_visual_de_objetos_para_tareas_de_manipulacion_colaborativas

./: README.md
CameraAstraOrbbecConfiguration/calibrationdata/: ost.txt  ost.yaml
FrankaPandaPreliminaryInvestigations/: Demo.txt  Franka_guide.txt  InternshipReport2023_Lucazeau.docx  README.md
FrankaPandaPreliminaryInvestigations/Antoine-Lucazeau_&_Francisco-Elizondo/panda_demo/: package.xml
FrankaPandaPreliminaryInvestigations/Antoine-Lucazeau_&_Francisco-Elizondo/panda_demo/action/: Gs.action
FrankaPandaPreliminaryInvestigations/Antoine-Lucazeau_&_Francisco-Elizondo/panda_demo/launch/: auto_pick.launch
FrankaPandaPreliminaryInvestigations/Antoine-Lucazeau_&_Francisco-Elizondo/panda_demo/src/: auto_picker.py  gripper_test.py
FrankaPandaPreliminaryInvestigations/DavidPaciosVazquez/: TFM_Marc_Badosa_Resume.md
FrankaPandaPreliminaryInvestigations/JuanAntonioTutorials/OpenCV/: camera_Sol1.py  trackObjetColor.py
FrankaPandaPreliminaryInvestigations/panda_demo/: CMakeLists.txt
FrankaPandaPreliminaryInvestigations/panda_demo/launch/: sensor_franka.launch
FrankaPandaPreliminaryInvestigations/panda_demo/msg/: GsFeedback.msg
FrankaPandaPreliminaryInvestigations/panda_demo/src/: auto_picker.py  cylinder_seg_old.cpp  euclidean_cluster.cpp  gripper_control.py  pick_and_place_python.py
beginner_tutorials/: CMakeLists.txt  package.xml
ws_davidpacios/: Informacion.md  frames.gv
ws_davidpacios/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ws_davidpacios/devel/lib/: libchomp_motion_planner.so.1.1.13  libchomp_planner_plugin.so.1.1.13  libcollision_detector_bullet_plugin.so.1.1.13  libcollision_detector_fcl_plugin.so.1.1.13  libgeometric_shapes.so.0.7.5  libmoveit_background_processing.so.1.1.13  libmoveit_cached_ik_kinematics_base.so.1.1.13  libmoveit_cached_ik_kinematics_plugin.so.1.1.13  libmoveit_chomp_optimizer_adapter.so.1.1.13  libmoveit_collision_detection.so.1.1.13  libmoveit_collision_detection_bullet.so.1.1.13  libmoveit_collision_detection_fcl.so.1.1.13  libmoveit_collision_distance_field.so.1.1.13  libmoveit_collision_plugin_loader.so.1.1.13  libmoveit_common_planning_interface_objects.so.1.1.13  libmoveit_constraint_sampler_manager_loader.so.1.1.13  libmoveit_constraint_samplers.so.1.1.13  libmoveit_cpp.so.1.1.13  libmoveit_default_planning_request_adapter_plugins.so.1.1.13  libmoveit_depth_image_octomap_updater.so.1.1.13  libmoveit_depth_image_octomap_updater_core.so.1.1.13  libmoveit_depth_self_filter.so.1.1.13  libmoveit_distance_field.so.1.1.13  libmoveit_dynamics_solver.so.1.1.13  libmoveit_exceptions.so.1.1.13  libmoveit_fake_controller_manager.so.1.1.13  libmoveit_kdl_kinematics_plugin.so.1.1.13  libmoveit_kinematic_constraints.so.1.1.13  libmoveit_kinematics_base.so.1.1.13  libmoveit_kinematics_metrics.so.1.1.13  libmoveit_kinematics_plugin_loader.so.1.1.13  libmoveit_lazy_free_space_updater.so.1.1.13  libmoveit_lerp_planner_plugin.so.0.1.0  libmoveit_lma_kinematics_plugin.so.1.1.13  libmoveit_mesh_filter.so.1.1.13  libmoveit_motion_planning_rviz_plugin.so.1.1.13  libmoveit_motion_planning_rviz_plugin_core.so.1.1.13  libmoveit_move_group_capabilities_base.so.1.1.13  libmoveit_move_group_default_capabilities.so.1.1.13  libmoveit_move_group_interface.so.1.1.13  (+53 more)
ws_davidpacios/logs/astra_camera/: build.cmake.000.log.stderr  build.make.015.log.stderr  build.make.033.log.stderr
ws_davidpacios/logs/chomp_motion_planner/: build.cmake.000.log.stderr
ws_davidpacios/logs/geometric_shapes/: build.cmake.000.log.stderr
ws_davidpacios/logs/moveit_chomp_optimizer_adapter/: build.cmake.000.log.stderr
ws_davidpacios/logs/moveit_core/: build.cmake.000.log.stderr
ws_davidpacios/logs/moveit_fake_controller_manager/: build.cmake.000.log.stderr
ws_davidpacios/logs/moveit_kinematics/: build.cmake.000.log.stderr
ws_davidpacios/logs/moveit_planners_chomp/: build.cmake.000.log.stderr
ws_davidpacios/logs/moveit_planners_ompl/: build.cmake.000.log.stderr
ws_davidpacios/logs/moveit_ros_benchmarks/: build.cmake.000.log.stderr  build.make.002.log.stderr  build.make.018.log.stderr
ws_davidpacios/logs/moveit_ros_control_interface/: build.cmake.000.log.stderr
ws_davidpacios/logs/moveit_ros_manipulation/: build.cmake.000.log.stderr
ws_davidpacios/logs/moveit_ros_move_group/: build.cmake.000.log.stderr
ws_davidpacios/logs/moveit_ros_occupancy_map_monitor/: build.cmake.000.log.stderr
ws_davidpacios/logs/moveit_ros_perception/: build.cmake.000.log.stderr
ws_davidpacios/logs/moveit_ros_planning/: build.cmake.000.log.stderr
ws_davidpacios/logs/moveit_ros_planning_interface/: build.cmake.000.log.stderr
ws_davidpacios/logs/moveit_ros_robot_interaction/: build.cmake.000.log.stderr
ws_davidpacios/logs/moveit_ros_visualization/: build.check.032.log.stderr
ws_davidpacios/logs/moveit_ros_warehouse/: build.cmake.000.log.stderr
ws_davidpacios/logs/moveit_servo/: build.cmake.000.log.stderr
ws_davidpacios/logs/moveit_simple_controller_manager/: build.cmake.000.log.stderr
ws_davidpacios/src/: .rosinstall  .rosinstall.bak
ws_davidpacios/src/movement_davidpacios/: CMakeLists.txt  (+2 more)
(+1726 files in other folders)
